scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,10 @@
 }
 ::-webkit-scrollbar-track {
   background-color: #ebebeb;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb {
   -webkit-border-radius: 10px;
-  border-radius: 10px;
+  border-radius: 3px;
   background: #184f7a;
 }
 a {
